FIX: Hide overflow

--- a/NYU-IDM-Web-Development/Week-11/style.css
+++ b/NYU-IDM-Web-Development/Week-11/style.css
@@ -57,7 +57,9 @@ img{
     flex-direction: column;
 }
 
-/* #title_wrapper{ } Wrapper present in case animation should change*/
+#title_wrapper{ 
+    overflow: hidden;
+}
 
 #psuedo_code{
     font-family: 'Plus Jakarta Sans', sans-serif;
